--- a/learning/courses/quantum-business-foundations/how-to-become-quantum-ready.ipynb
+++ b/learning/courses/quantum-business-foundations/how-to-become-quantum-ready.ipynb
@@ -221,15 +221,12 @@
     "\n",
     "People in your organization will see their quantum skills develop rapidly through routine contact with our in-house talent through the IBM Quantum Network. Member workforces gain access to advanced, in-depth training programs and individualized, live talks from IBM Quantum experts.\n",
     "\n",
-    "Being a partner in the IBM Quantum Network also comes with access to premium course content for upskilling in your organization. We have content for technical practitioners and also for business and organizational leadership. For example, if you are a partner in the IBM Quantum Network and would like to learn more about how to be successful in your partnership, please check out our course [Building Successful Quantum Initiatives](http://ibm.biz/IBMQ_BSQI). The course is accessible to Network partners only, and it covers what to expect in early stages of your quantum journey, things to keep in mind when approaching members/clients, and much more! It also gives additional context to the IBM Quantum Network through interviews with leadership from a variety of partners, including large corporations, academic institutions, startups, and more!\n",
-    "\n",
     "### Join quantum’s inner circle\n",
     "\n",
-    "Hear from the brightest minds in the field at our monthly IBM Quantum Network Colloquium and Technical Exchange (Register for IBM Quantum Network Colloquium) and at the annual IBM Quantum Developer Conference. Use that access to stay at the forefront of quantum development. Progress your own work in collaboration with peers and IBM Quantum experts. Here is a short list of core events available to partners in the IBM Quantum Network:\n",
+    "Progress your own work in collaboration with peers and IBM Quantum experts. Here are a few networking events to keep in mind:\n",
     "\n",
     "* **The IBM Quantum Developer Conference**: An annual event bringing together developers worldwide to preview forthcoming updates to the IBM Quantum roadmap and get hands-on demos of state-of-the-art IBM Quantum software tools.\n",
     "* **The IBM Quantum Partner Forum**: A conference-style gathering of leadership from across the IBM Quantum Network. Partners in the IBM Quantum Network can access the [event recordings](https://learning.quantum.ibm.com/course/ibm-quantum-network-partner-forums).\n",
-    "* **Qiskit 101 & 102**: A replay of live enablement sessions for those beginning their technical development in quantum computing with Qiskit. Access the [event recordings](https://learning.quantum.ibm.com/course/qiskit-101-and-102) at any time.\n",
     "\n",
     "\n",
     "## Navigate IBM Quantum Resources\n",
