--- a/learning/courses/quantum-business-foundations/quantum-technology.ipynb
+++ b/learning/courses/quantum-business-foundations/quantum-technology.ipynb
@@ -27,12 +27,11 @@
     "\n",
     "### IBM Quantum Platform\n",
     "\n",
-    "IBM Quantum provides a suite of quantum computing tools that brings together all of the research and development resources that users need to do great work, in one place. Four important pages/resources are the IBM Quantum Platform, IBM Quantum Documentation, IBM Quantum Learning, and IBM Quantum Administration.\n",
+    "IBM Quantum provides a suite of quantum computing tools that brings together all of the research and development resources that users need to do great work, in one place. Four important pages/resources are the IBM Quantum Platform, IBM Quantum Documentation, and IBM Quantum Learning.\n",
     "\n",
     "* [IBM Quantum Platform](https://quantum-computing.ibm.com/) serves as the primary access point for the product ecosystem, where users can get their API keys, track jobs, and compare systems. From the Platform dashboard, users will find a summary of their access details, in addition to links for helpful destinations across the other apps, including featured courses, documentation resources, and links to learning tools.\n",
     "* [IBM Quantum Documentation](https://docs.quantum-computing.ibm.com/) aggregates Qiskit documentation, service documentation, and API reference information into one location, organized in a way that supports users' natural workflows.\n",
     "* [IBM Quantum Learning](https://learning.quantum-computing.ibm.com/) is the home for educational material and experimentation tools, and is designed to help get users up to speed on various quantum computing topics and use cases.\n",
-    "* IBM Quantum Administration is a dashboard available to users who manage quantum computer usage for their organization.\n",
     "\n",
     "### Qiskit Runtime on IBM Cloud\n",
     "\n",
