--- a/learning/courses/quantum-business-foundations/start-your-quantum-journey.mdx
+++ b/learning/courses/quantum-business-foundations/start-your-quantum-journey.mdx
@@ -17,7 +17,7 @@ The total duration is approximately 2–3 hours for reviewing the content direct
 
 #### Earning the Quantum Business Foundations badge
 
-The last module of the course contains the final exam. You must complete all modules and pass the final exam in order to earn your IBM Quantum Business Foundations badge.
+Upon completion of the course, you can follow the link to IBM Training to take a badging exam if you wish. Upon passing the badging exam you will earn your IBM Quantum Business Foundations badge.
 
 ![IBM Quantum Business Badge)(/learning/images/courses/quantum-business-foundations/start-your-quantum-journey/qbf-badge.avif)
 
