--- a/learning/courses/basics-of-quantum-information/single-systems/classical-information.ipynb
+++ b/learning/courses/basics-of-quantum-information/single-systems/classical-information.ipynb
@@ -7,10 +7,8 @@
    "source": [
     "# Classical information\n",
     "\n",
-    "To describe quantum information and how it works, we will begin with an overview of [classical][classical] information.\n",
+    "To describe quantum information and how it works, we will begin with an overview of <DefinitionTooltip definition=\"The term classical refers to concepts, ideas, and descriptions based on physical theories (such as Newtonian physics) that predate the discovery of quantum theory. In the context of information, it can be interpreted as meaning not specifically connected to quantum information\">classical</DefinitionTooltip> information.\n",
     "It is natural to wonder why so much attention is paid to classical information in a course on quantum information, but there are good reasons.\n",
-    "\n",
-    "[classical]: #definition-tooltip \"The term classical refers to concepts, ideas, and descriptions based on physical theories (such as Newtonian physics) that predate the discovery of quantum theory. In the context of information, it can be interpreted as meaning not specifically connected to quantum information.\"\n",
     "\n",
     "For one, although quantum and classical information are different in some spectacular ways, their mathematical descriptions are actually quite similar.\n",
     "Classical information also serves as a familiar point of reference when studying quantum information, as well as a source of analogy that goes a surprisingly long way.\n",
@@ -23,11 +21,9 @@
     "\n",
     "## Classical states and probability vectors\n",
     "\n",
-    "Suppose that we have a [system][system] that stores information.\n",
+    "Suppose that we have a <DefinitionTooltip definition=\"In this course, a system is an abstraction of a physical device or a medium that stores information\">system</DefinitionTooltip> that stores information.\n",
     "More specifically, we shall assume that this system can be in one of a finite number of *classical states* at each instant.\n",
     "Here, the term *classical state* should be understood in intuitive terms, as a configuration that can be recognized and described unambiguously.\n",
-    "\n",
-    "[system]: #definition-tooltip \"In this course, a system is an abstraction of a physical device or a medium that stores information.\"\n",
     "\n",
     "The archetypal example, which we will come back to repeatedly, is that of a *bit*, which is a system whose classical states are $0$ and $1.$\n",
     "Other examples include a standard six-sided die, whose classical states are $1,$ $2,$ $3,$ $4,$ $5,$ and $6$ (represented by the corresponding number of dots on whatever face is on top); a nucleobase in a strand of DNA, whose classical states are *A*, *C*, *G*, and *T;* and a switch on an electric fan, whose classical states are (commonly) *high*, *medium*, *low*, and *off*.\n",
@@ -156,9 +152,7 @@
     "\n",
     "### Deterministic operations\n",
     "\n",
-    "First, there are [deterministic][deterministic] operations, where each classical state $a\\in\\Sigma$ is transformed into $f(a)$ for some function $f$ of the form $f:\\Sigma\\rightarrow\\Sigma.$\n",
-    "\n",
-    "[deterministic]: #definition-tooltip \"An operation is deterministic if the result is completely determined by the input without any element of chance or uncertainty.\"\n",
+    "First, there are <DefinitionTooltip definition=\"An operation is deterministic if the result is completely determined by the input without any element of chance or uncertainty.\">deterministic</DefinitionTooltip> operations, where each classical state $a\\in\\Sigma$ is transformed into $f(a)$ for some function $f$ of the form $f:\\Sigma\\rightarrow\\Sigma.$\n",
     "\n",
     "For example, if $\\Sigma = \\{0,1\\},$ there are four functions of this form, $f_1,$ $f_2,$ $f_3,$ and $f_4,$ which can be represented by tables of values as follows:\n",
     "\n",
@@ -195,10 +189,8 @@
     "The first and last of these functions are *constant:* $f_1(a) = 0$ and $f_4(a) = 1$ for each $a\\in\\Sigma.$\n",
     "The middle two are not constant, they are *balanced:* each of the two output values occurs the same number of times\n",
     "(once, in this case) as we range over the possible inputs.\n",
-    "The function $f_2$ is the [identity function][identity-function]: $f_2(a) = a$ for each $a\\in\\Sigma.$\n",
+    "The function $f_2$ is the <DefinitionTooltip definition=\"The identity function returns its input unchanged.\">identity function</DefinitionTooltip>: $f_2(a) = a$ for each $a\\in\\Sigma.$\n",
     "And $f_3$ is the function $f_3(0) = 1$ and $f_3(1) = 0,$ which is better-known as the NOT function.\n",
-    "\n",
-    "[identity-function]: #definition-tooltip \"The identity function returns its input unchanged.\"\n",
     "\n",
     "The actions of deterministic operations on probabilistic states can be represented by matrix-vector multiplication.\n",
     "Specifically, the matrix $M$ that represents a given function $f:\\Sigma\\rightarrow\\Sigma$ is the one that satisfies\n",
@@ -366,9 +358,7 @@
     "Inner products are critically important in quantum information, but we'll delay a discussion of them until they are needed.\n",
     "\n",
     "At this point the names \"bra\" and \"ket\" may be evident: putting a \"bra\" $\\langle a\\vert$ together with a \"ket\" $\\vert b\\rangle$ yields a \"bracket\" $\\langle a \\vert b\\rangle.$\n",
-    "This notation and terminology is due to [Paul Dirac][Dirac], and for this reason is known as the *Dirac notation*.\n",
-    "\n",
-    "[Dirac]: #definition-tooltip \"Paul Dirac was a physicist who made key contributions to the development of quantum physics.\"\n",
+    "This notation and terminology is due to <DefinitionTooltip definition=\"Paul Dirac was a physicist who made key contributions to the development of quantum physics.\">Paul Dirac</DefinitionTooltip>, and for this reason is known as the *Dirac notation*.\n",
     "\n",
     "### Probabilistic operations and stochastic matrices\n",
     "\n",
@@ -387,9 +377,7 @@
     "\n",
     "One can check that this matrix does the correct thing by multiplying the two standard basis vectors by it.\n",
     "\n",
-    "For an arbitrary choice of a classical state set, we can describe the set of all probabilistic operations in mathematical terms as those that are represented by [stochastic][stochastic] matrices, which are matrices satisfying these two properties:\n",
-    "\n",
-    "[stochastic]: #definition-tooltip \"'Stochastic' roughly means 'random'. A stochastic matrix represents a random process.\"\n",
+    "For an arbitrary choice of a classical state set, we can describe the set of all probabilistic operations in mathematical terms as those that are represented by <DefinitionTooltip definition=\"'Stochastic' roughly means 'random'. A stochastic matrix represents a random process.\">stochastic</DefinitionTooltip> matrices, which are matrices satisfying these two properties:\n",
     "\n",
     "1. All entries are nonnegative real numbers.\n",
     "2. The entries in every column sum to $1.$\n",
@@ -436,12 +424,8 @@
     "  M_2 (M_1 u) = (M_2 M_1) u.\n",
     "$$\n",
     "\n",
-    "The equality follows from the fact that matrix multiplication (which includes matrix-vector multiplication as a special case) is an [associative][associative] operation.\n",
-    "Thus, the probabilistic operation obtained by [composing][composition] the first and second probabilistic operations, where we first apply $M_1$ and then apply $M_2,$ is represented by the matrix $M_2 M_1,$ which is necessarily stochastic.\n",
-    "\n",
-    "[associative]: #definition-tooltip \"An operation is associative if we can move the position of the parentheses and get the same result.\"\n",
-    "\n",
-    "[composition]: #definition-tooltip \"Composition refers to applying one function or operation after another.\"\n",
+    "The equality follows from the fact that matrix multiplication (which includes matrix-vector multiplication as a special case) is an <DefinitionTooltip definition=\"An operation is associative if we can move the position of the parentheses and get the same result.\">associative</DefinitionTooltip> operation.\n",
+    "Thus, the probabilistic operation obtained by <DefinitionTooltip definition=\"Composition refers to applying one function or operation after another.\">composing</DefinitionTooltip> the first and second probabilistic operations, where we first apply $M_1$ and then apply $M_2,$ is represented by the matrix $M_2 M_1,$ which is necessarily stochastic.\n",
     "\n",
     "More generally, composing the probabilistic operations represented by the matrices $M_1,\\ldots,M_n$ in this order, meaning that $M_1$ is applied first, $M_2$ is applied second, and so on, with $M_n$ applied last, is represented by\n",
     "the matrix product\n",
@@ -450,7 +434,7 @@
     "  M_n \\,\\cdots\\, M_1.\n",
     "$$\n",
     "\n",
-    "Note that the ordering is important here: although matrix multiplication is associative, it is not a [commutative][commutative] operation.\n",
+    "Note that the ordering is important here: although matrix multiplication is associative, it is not a <DefinitionTooltip definition=\"An operation is commutative if switching the order of the inputs does not change the result.\">commutative</DefinitionTooltip> operation.\n",
     "For example, if\n",
     "\n",
     "$$\n",
@@ -482,8 +466,6 @@
     "    0 & 0\n",
     "  \\end{pmatrix}.\n",
     "$$\n",
-    "\n",
-    "[commutative]: #definition-tooltip \"An operation is commutative if switching the order of the inputs does not change the result.\"\n",
     "\n",
     "That is, the order in which probabilistic operations are composed matters; changing the order in which operations are applied in a composition can change the resulting operation."
    ]
