--- a/learning/courses/basics-of-quantum-information/single-systems/classical-information.ipynb
+++ b/learning/courses/basics-of-quantum-information/single-systems/classical-information.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "## Classical states and probability vectors\n",
     "\n",
-    "Suppose that we have a <DefinitionTooltip definition=\"In this course, a system is an abstraction of a physical device or a medium that stores information\">system</DefinitionTooltip> that stores information.\n",
+    "Suppose that we have a <DefinitionTooltip definition=\"In this course, a system is an abstraction of a physical device or a medium that stores information.\">system</DefinitionTooltip> that stores information.\n",
     "More specifically, we shall assume that this system can be in one of a finite number of *classical states* at each instant.\n",
     "Here, the term *classical state* should be understood in intuitive terms, as a configuration that can be recognized and described unambiguously.\n",
     "\n",
