Generate qiskit-addon-obp v0.3.0 (#3170)
This PR generates the docs for qiskit-addon-obp version 0.3.0 and
converts version 0.2.0 in to historical.

```
npm run gen-api -- -p qiskit-addon-obp -v 0.2.0 --historical
npm run gen-api -- -p qiskit-addon-obp -v 0.3.0
```

--- a/docs/api/qiskit-addon-obp/0.2/index.mdx
+++ b/docs/api/qiskit-addon-obp/0.2/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Operator backpropagation (OBP) API documentation (latest version)
-description: Index of all the modules in the latest version of qiskit-addon-obp.
+title: Operator backpropagation (OBP) API documentation (v0.2)
+description: Index of all the modules in qiskit-addon-obp v0.2.
 ---
 
 <span id="qiskit-addon-obp-api-reference" />
@@ -9,7 +9,6 @@ description: Index of all the modules in the latest version of qiskit-addon-obp.
 
 *   [Operator backpropagation (`qiskit_addon_obp`)](qiskit-addon-obp)
 *   [Metadata utilities (`qiskit_addon_obp.utils.metadata`)](utils-metadata)
-*   [Noise utilities (`qiskit_addon_obp.utils.noise`)](utils-noise)
 *   [Operator utilities (`qiskit_addon_obp.utils.operations`)](utils-operations)
 *   [Pauli operator simplification (`qiskit_addon_obp.utils.simplify`)](utils-simplify)
 *   [Truncation utilities (`qiskit_addon_obp.utils.truncating`)](utils-truncating)
