--- a/docs/api/qiskit-addon-obp/0.2/utils-metadata-slice-metadata.mdx
+++ b/docs/api/qiskit-addon-obp/0.2/utils-metadata-slice-metadata.mdx
@@ -1,6 +1,6 @@
 ---
-title: SliceMetadata (latest version)
-description: API reference for qiskit_addon_obp.utils.metadata.SliceMetadata in the latest version of qiskit-addon-obp
+title: SliceMetadata (v0.2)
+description: API reference for qiskit_addon_obp.utils.metadata.SliceMetadata in qiskit-addon-obp v0.2
 in_page_toc_min_heading_level: 1
 python_api_type: class
 python_api_name: qiskit_addon_obp.utils.metadata.SliceMetadata
@@ -8,7 +8,7 @@ python_api_name: qiskit_addon_obp.utils.metadata.SliceMetadata
 
 # SliceMetadata
 
-<Class id="qiskit_addon_obp.utils.metadata.SliceMetadata" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-obp/tree/stable/0.3/qiskit_addon_obp/utils/metadata.py#L25-L90" signature="SliceMetadata(slice_errors, raw_num_paulis, num_unique_paulis, num_duplicate_paulis, num_trimmed_paulis, sum_trimmed_coeffs, num_truncated_paulis, num_paulis, sum_paulis, num_qwc_groups)" modifiers="class">
+<Class id="qiskit_addon_obp.utils.metadata.SliceMetadata" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-obp/tree/stable/0.2/qiskit_addon_obp/utils/metadata.py#L25-L90" signature="SliceMetadata(slice_errors, raw_num_paulis, num_unique_paulis, num_duplicate_paulis, num_trimmed_paulis, sum_trimmed_coeffs, num_truncated_paulis, num_paulis, sum_paulis, num_qwc_groups)" modifiers="class">
   Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.13)")
 
   A container for metadata generated during the backpropagation of a single slice.
