Change sherbrooke to torino

--- a/docs/guides/qiskit-transpiler-service.ipynb
+++ b/docs/guides/qiskit-transpiler-service.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "## qiskit-ibm-transpiler transpile options\n",
     "\n",
-    "- `backend_name` (optional, str) - A backend name as it would be expected by QiskitRuntimeService (for example, `ibm_sherbrooke`). If this is set, the transpile method uses the layout from the specified backend for the transpilation operation. If any other option is set that impacts these settings, such as `coupling_map`, the `backend_name` settings are overridden.\n",
+    "- `backend_name` (optional, str) - A backend name as it would be expected by QiskitRuntimeService (for example, `ibm_torino`). If this is set, the transpile method uses the layout from the specified backend for the transpilation operation. If any other option is set that impacts these settings, such as `coupling_map`, the `backend_name` settings are overridden.\n",
     "- `coupling_map` (optional, List[List[int]]) - A valid coupling map list (for example, [[0,1],[1,2]]). If this is set, the transpile method uses this coupling map for the transpilation operation. If defined, it overrides any value specified for `target`.\n",
     "- `optimization_level` (int) - The potential optimization level to apply during the transpilation process. Valid values are [1,2,3], where 1 is the least optimization (and fastest), and 3 the most optimization (and most time-intensive).\n",
     "- `ai` (\"true\", \"false\", \"auto\") - Whether to use AI-powered capabilities during transpilation. The AI-powered capabilities available can be for `AIRouting` transpiling passes or other AI-powered synthesis methods. If this value is `\"true\"`, the service applies different AI-powered transpiling passes depending on the `optimization_level` requested. If  `\"false\"`, it uses the latest Qiskit transpiling features without AI. Finally, if `\"auto\"`, the service decides whether to apply the standard Qiskit heuristic passes or the AI-powered passes based on your circuit.\n",
@@ -62,7 +62,7 @@
     "\n",
     "The following examples demonstrate how to transpile circuits using the Qiskit Transpiler Service with different parameters.\n",
     "\n",
-    "1. Create a circuit and call the Qiskit Transpiler Service to transpile the circuit with `ibm_sherbrooke` as the `backend_name`, 3 as the `optimization_level`, and without using AI during the transpilation."
+    "1. Create a circuit and call the Qiskit Transpiler Service to transpile the circuit with `ibm_torino` as the `backend_name`, 3 as the `optimization_level`, and without using AI during the transpilation."
    ]
   },
   {
@@ -78,7 +78,7 @@
     "circuit = efficient_su2(101, entanglement=\"circular\", reps=1)\n",
     "\n",
     "cloud_transpiler_service = TranspilerService(\n",
-    "    backend_name=\"ibm_sherbrooke\",\n",
+    "    backend_name=\"ibm_torino\",\n",
     "    ai=\"false\",\n",
     "    optimization_level=3,\n",
     ")\n",
@@ -108,7 +108,7 @@
     "circuit = efficient_su2(101, entanglement=\"circular\", reps=1)\n",
     "\n",
     "cloud_transpiler_service = TranspilerService(\n",
-    "    backend_name=\"ibm_sherbrooke\",\n",
+    "    backend_name=\"ibm_torino\",\n",
     "    ai=\"true\",\n",
     "    optimization_level=1,\n",
     ")\n",
@@ -136,7 +136,7 @@
     "circuit = efficient_su2(101, entanglement=\"circular\", reps=1)\n",
     "\n",
     "cloud_transpiler_service = TranspilerService(\n",
-    "    backend_name=\"ibm_sherbrooke\",\n",
+    "    backend_name=\"ibm_torino\",\n",
     "    ai=\"auto\",\n",
     "    optimization_level=1,\n",
     ")\n",
