--- a/docs/tutorials/advanced-techniques-for-qaoa.ipynb
+++ b/docs/tutorials/advanced-techniques-for-qaoa.ipynb
@@ -17,7 +17,7 @@
    "id": "1a869c2d-ae51-47d3-8a41-bfcf5e505f59",
    "metadata": {},
    "source": [
-    "# Advanced Techniques for QAOA\n",
+    "# Advanced techniques for QAOA\n",
     "*Usage estimate: 25 minutes on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
