--- a/docs/tutorials/transpilation-optimizations-with-sabre.ipynb
+++ b/docs/tutorials/transpilation-optimizations-with-sabre.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "{/* cspell:ignore edgecolor */}\n",
     "\n",
-    "# Transpilation Optimizations with SABRE\n",
+    "# Transpilation optimizations with SABRE\n",
     "*Usage estimate: under 1 minute on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
