add empty version-info cell

--- a/docs/guides/dynamic-circuits-considerations.ipynb
+++ b/docs/guides/dynamic-circuits-considerations.ipynb
@@ -9,6 +9,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "b3d504a0-ce8a-4bfb-aa0a-304c3360e81f",
    "metadata": {},
