Fix citations, remove unnecessary li padding, and ignore exam link

--- a/learning/courses/quantum-business-foundations/introduction-to-quantum-computing.mdx
+++ b/learning/courses/quantum-business-foundations/introduction-to-quantum-computing.mdx
@@ -101,11 +101,11 @@ While some may consider quantum computing an innovative area at the beginning of
 |         |       |
 | ----------------- | -- |
 | <em>1970</em> | Charles H. Bennett may have been the first person to write the phrase “quantum information theory” on February 24, 1970, while working as a research scientist at IBM. His note was a harbinger of the tremendous work by many others that would follow, leading the world onto the path toward quantum advantage.|
-| <em>1981</em> | Richard Feynman, a noted theoretical physicist, identified the potential for quantum computers as far back as 1981. At the first Conference on the Physics of Computation, organized by IBM and the Massachusetts Institute of Technology (MIT), he famously closed his keynote speech with the statement “[...] nature isn’t classical, dammit, and if you want to make a simulation of nature, you’d better make it quantum mechanical, and by golly it’s a wonderful problem, because it doesn’t look so easy.” [1]|
+| <em>1981</em> | Richard Feynman, a noted theoretical physicist, identified the potential for quantum computers as far back as 1981. At the first Conference on the Physics of Computation, organized by IBM and the Massachusetts Institute of Technology (MIT), he famously closed his keynote speech with the statement “[...] nature isn’t classical, dammit, and if you want to make a simulation of nature, you’d better make it quantum mechanical, and by golly it’s a wonderful problem, because it doesn’t look so easy.” [\[1\]](#sources)|
 | <em> 1994 </em> | In 1994, Peter Shor, a mathematician then at AT&amp;T Bell Labs in New Jersey, proved that a fully functional quantum computer could do something remarkable: it could crack RSA encryption, a popular means of securing private communications. He showed that his quantum algorithm could do in minutes what might take a regular computer the lifetime of the universe to unravel. <sup>2</sup>|
-| <em> 1996 </em> | A year later, Lov Grover, also a Bell Labs scientist, came up with a quantum algorithm that would allow people to swiftly search unstructured databases. Scientists piled into the field, and advances in hardware soon followed the breakthroughs in code. [2]|
-| <em> 1998 </em> | The first experimental demonstration of a quantum algorithm was achieved in 1998. A working 2–qubit nuclear magnetic resonance (NMR) quantum computer was used to solve Deutsch’s problem by Jonathan A. Jones and Michele Mosca at Oxford University and shortly after by Isaac L. Chuang at IBM’s Almaden Research Center and Mark Kubinec and the University of California, Berkeley, together with coworkers at Stanford University and MIT. [3]|
-| <em> 2001 </em> | 2001 saw the first execution of Shor’s algorithm at IBM’s Almaden Research Center and Stanford University. The number 15 was factored using 1018 identical molecules, each containing seven active nuclear spins. [4]|
+| <em> 1996 </em> | A year later, Lov Grover, also a Bell Labs scientist, came up with a quantum algorithm that would allow people to swiftly search unstructured databases. Scientists piled into the field, and advances in hardware soon followed the breakthroughs in code. [\[2\]](#sources)|
+| <em> 1998 </em> | The first experimental demonstration of a quantum algorithm was achieved in 1998. A working 2–qubit nuclear magnetic resonance (NMR) quantum computer was used to solve Deutsch’s problem by Jonathan A. Jones and Michele Mosca at Oxford University and shortly after by Isaac L. Chuang at IBM’s Almaden Research Center and Mark Kubinec and the University of California, Berkeley, together with coworkers at Stanford University and MIT. [\[3\]](#sources)|
+| <em> 2001 </em> | 2001 saw the first execution of Shor’s algorithm at IBM’s Almaden Research Center and Stanford University. The number 15 was factored using 1018 identical molecules, each containing seven active nuclear spins. [\[4\]](#sources)|
 | <em> 2005 </em> | By the mid–2000s, the research field had developed several types of superconducting qubits, each with its own advantages and drawbacks. In 2007, a team at Yale found a way to combine some of these approaches to overcome their individual shortcomings, naming the new design the “transmon qubit.” The transmon qubit would go on to be at the heart of many companies’ efforts to develop quantum computers, including IBM Quantum, Google AI, and Rigetti Computing. A member of the Yale team, Jay Gambetta, later became Vice President of Quantum Computing for IBM Research. |
 
 ![IBM’s four-qubit quantum computer](/learning/images/courses/quantum-business-foundations/introduction-to-quantum-computing/fourqubitdevice_small.avif)
@@ -115,7 +115,7 @@ While some may consider quantum computing an innovative area at the beginning of
 
 |         |       |
 | ----------------- | -- |
-| <em> 2016 </em> | In May of 2016, IBM was the first company to launch a cloud quantum computing service that included real quantum computers, called IBM Quantum Experience. [5] |
+| <em> 2016 </em> | In May of 2016, IBM was the first company to launch a cloud quantum computing service that included real quantum computers, called IBM Quantum Experience. [\[5\]](#sources) |
 
 ![The launch of the IBM Quantum Experience in 2016 enabled users to access quantum computers from anywhere, even their tablet.](/learning/images/courses/quantum-business-foundations/introduction-to-quantum-computing/IBM-Quantum-Experience_small.avif)
 
@@ -123,7 +123,7 @@ While some may consider quantum computing an innovative area at the beginning of
 
 |         |       |
 | ----------------- | -- |
-| <em> 2017 </em> | In March of 2017, IBM released Qiskit, an open-source quantum programming framework. [6] In December of 2017, the IBM Quantum Network was launched to establish a quantum computing commercial ecosystem.|
+| <em> 2017 </em> | In March of 2017, IBM released Qiskit, an open-source quantum programming framework. [\[6\]](#sources) In December of 2017, the IBM Quantum Network was launched to establish a quantum computing commercial ecosystem.|
 | <em> 2019 </em> | IBM opened the Quantum Computation Center in New York, bringing the world’s largest fleet of quantum computers online.|
 
 ![IBM Quantum data center in Poughkeepsie](/learning/images/courses/quantum-business-foundations/introduction-to-quantum-computing/ibmq-computation-center_small.avif)
@@ -133,8 +133,8 @@ While some may consider quantum computing an innovative area at the beginning of
 |         |       |
 | ----------------- | -- |
 | <em> 2020 </em> | In September of 2020, IBM released a development roadmap to go from the noisy, small-scale quantum computers of the day to the million-plus qubit quantum computers of the future. The roadmap lays the course for hitting a milestone of a 1,121 qubit quantum computer in the year 2023, 1,386+ qubits in 2024, and over 4,000 qubits in 2025.|
-| <em> 2021 </em> | In the spring of 2021, IBM announced the release of Qiskit Runtime, a containerized execution environment for quantum-classical programs that eliminated some of the largest bottlenecks to workload performance. [7] In November of 2021, IBM reached a major milestone in quantum computing when it broke the 100-qubit processor barrier with Eagle, a 127-qubit quantum processor. [9]|
-| <em> 2022 </em> | In April of 2022, IBM launched Qiskit Runtime primitives, simplifying the developer experience and enabling users to get more meaningful results from quantum computers. [10] In May of 2022, IBM released an updated roadmap that anticipates a coming era of quantum-centric supercomputing in which modularity and diverse communication techniques will increase computational capacity. [11] In November of 2022, IBM introduced their 433-qubit IBM Quantum Osprey processor — the largest to date using superconducting qubits. [12] In that same month, IBM also launched Dynamic Circuits — computational circuits that use quantum and classical resources to enable mid-circuit measurements and feed-forward operations [13] — and announced new resilience level options for Qiskit Runtime primitives that allow users to experiment with error suppression and mitigation tools. [14] IBM is taking steps toward realizing quantum-centric supercomputing by releasing advanced middleware including the Circuit Knitting Toolbox, in 2025.|
+| <em> 2021 </em> | In the spring of 2021, IBM announced the release of Qiskit Runtime, a containerized execution environment for quantum-classical programs that eliminated some of the largest bottlenecks to workload performance. [\[7\]](#sources) In November of 2021, IBM reached a major milestone in quantum computing when it broke the 100-qubit processor barrier with Eagle, a 127-qubit quantum processor. [\[9\]](#sources)|
+| <em> 2022 </em> | In April of 2022, IBM launched Qiskit Runtime primitives, simplifying the developer experience and enabling users to get more meaningful results from quantum computers. [\[10\]](#sources) In May of 2022, IBM released an updated roadmap that anticipates a coming era of quantum-centric supercomputing in which modularity and diverse communication techniques will increase computational capacity. [\[11\]](#sources) In November of 2022, IBM introduced their 433-qubit IBM Quantum Osprey processor — the largest to date using superconducting qubits. [\[12\]](#sources) In that same month, IBM also launched Dynamic Circuits — computational circuits that use quantum and classical resources to enable mid-circuit measurements and feed-forward operations [\[13\]](#sources) — and announced new resilience level options for Qiskit Runtime primitives that allow users to experiment with error suppression and mitigation tools. [\[14\]](#sources) IBM is taking steps toward realizing quantum-centric supercomputing by releasing advanced middleware including the Circuit Knitting Toolbox, in 2025.|
 
 ![IBM Quantum Osprey processor](/learning/images/courses/quantum-business-foundations/introduction-to-quantum-computing/osprey_small.avif)
 
